# 3D-Engine---OpenGL

./: CMakeLists.txt  CMakePresets.json
Assets/Shaders/: BasicShader.frag  BasicShader.vert
Game/: MyGame.cpp  MyGame.h  MyPlayer.cpp  MyPlayer.h  main.cpp
OGL3D/include/OGL3D/: All.h  OPrerequisites.h
OGL3D/include/OGL3D/Entity/: OEntity.h  OEntitySystem.h
OGL3D/include/OGL3D/Game/: OGame.h
OGL3D/include/OGL3D/Graphics/: OGraphicsEngine.h  OShaderProgram.h  OUniformBuffer.h  OVertexArrayObject.h
OGL3D/include/OGL3D/Math/: OMat4.h  ORect.h  OVec2.h  OVec3.h  OVec4.h
OGL3D/include/OGL3D/Window/: OWindow.h
OGL3D/source/OGL3D/Entity/: OEntity.cpp  OEntitySystem.cpp
OGL3D/source/OGL3D/Game/: OGame.cpp
OGL3D/source/OGL3D/Game/Cocoa/: CCocoaGame.mm
OGL3D/source/OGL3D/Game/Win32/: CWin32Game.cpp
OGL3D/source/OGL3D/Game/X11/: CX11Game.cpp
OGL3D/source/OGL3D/Graphics/: OGraphicsEngine.cpp  OShaderProgram.cpp  OUniformBuffer.cpp  OVertexArrayObject.cpp
OGL3D/source/OGL3D/Graphics/Cocoa/: CCocoaGraphicsEngine.mm
OGL3D/source/OGL3D/Graphics/Win32/: CWin32GraphicsEngine.cpp
OGL3D/source/OGL3D/Graphics/X11/: CX11Globals.h  CX11GraphicsEngine.cpp
OGL3D/source/OGL3D/Window/: CCocoaWindow.mm  CWin32Window.cpp  CX11Window.cpp
